Made changes to B-5

--- a/SET-B/B-5/index.html
+++ b/SET-B/B-5/index.html
@@ -36,7 +36,16 @@
                 Veritatis quasi cumque at distinctio ipsam, aliquid sit consectetur quam! Eveniet ipsum deserunt unde laudantium aspernatur voluptatem dolore ex distinctio beatae maiores eaque itaque vel, doloribus modi asperiores voluptas quo!
                 Soluta pariatur quasi dicta quidem dolorem obcaecati quos, modi sit autem qui atque officiis tempore tenetur culpa asperiores ut. Natus magnam culpa, voluptas aliquid esse dolorum nisi error quia dolorem!
                 Hic suscipit voluptate reprehenderit modi corporis doloribus excepturi ad. Autem dignissimos ad unde nisi numquam nihil. Consequuntur inventore iure perferendis voluptates officiis deserunt, quaerat similique veritatis, nam et minima error?
-                Praesentium qui alias 
+                Praesentium qui alias Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae tempora eaque architecto odit et neque officia voluptatum, ullam hic perferendis odio magnam eos ut delectus nulla nostrum tempore! Tempore, consequatur.
+                Aut aliquid voluptates at non culpa enim perferendis quam repudiandae sed consequatur architecto, eos quo omnis vel. Autem modi at dolores, veritatis et quia id, accusantium consequuntur esse consectetur similique.
+                Voluptatum, odio vero ut autem ex quae quos dignissimos rem eligendi aspernatur accusamus ducimus fugiat harum adipisci unde qui, iste quo accusantium sunt porro consequuntur. Quisquam totam nulla a tenetur.
+                Dolor in iste placeat veritatis eius nobis enim, inventore fuga non saepe iusto ea ipsa labore praesentium reprehenderit qui! Obcaecati libero quo ullam sit autem necessitatibus natus aliquid tempora distinctio.
+                Nemo fugit officia neque enim laborum suscipit ab obcaecati! Praesentium, necessitatibus aspernatur voluptates culpa explicabo repellendus cumque? Et quam voluptas dolorem sapiente quibusdam saepe error, atque, nesciunt recusandae quos temporibus?
+                Amet explicabo, accusantium nulla nihil voluptate in voluptatibus. Voluptates impedit quo, amet quisquam quos fuga possimus consectetur totam asperiores. Velit eum deserunt quam rerum! Quas reprehenderit libero aliquid alias eligendi.
+                Dolores nihil nisi, aspernatur aliquam dolorum voluptates natus, modi distinctio quia quod soluta earum eum, tenetur minus unde! Praesentium ducimus similique nihil magni nesciunt suscipit? Voluptates ab laudantium possimus rem.
+                Corporis ut similique rerum cum dolorem aliquam veritatis nesciunt quod laboriosam, magni voluptatibus magnam dicta assumenda voluptatem pariatur doloribus numquam, aliquid nisi ex unde itaque doloremque? Consequuntur est fugiat magnam!
+                Voluptate accusamus mollitia at recusandae dolores! Architecto quo blanditiis fugit incidunt nostrum adipisci voluptatem, perferendis provident nobis facilis accusamus, dolores iure similique laudantium quaerat error quae numquam excepturi laborum maxime.
+                Ullam omnis, similique aut eaque temporibus ad quod ipsum qui. Quisquam debitis quia minus officiis? Ab fuga aliquam facilis sapiente fugiat, magni assumenda consectetur recusandae nesciunt et sed voluptate nihil.
                 <img src="14038814.png" class="align-right slide-in" style="float:right;"> 
                 minus nesciunt eius blanditiis non dolorum possimus tempore error numquam quo, eveniet perspiciatis aspernatur sint accusamus, saepe voluptatem esse distinctio corrupti impedit illum? Eius sint eum corrupti!
                 Eos eaque consequatur dolores quibusdam soluta aliquid id. Cum distinctio deleniti, consequatur nihil nulla fuga explicabo facere voluptas neque fugiat culpa. Excepturi, itaque pariatur. Odit esse nisi illum expedita possimus.
@@ -111,14 +120,11 @@
               slidein.classList.add('active');
           }
 
-          else
-          {
-              slidein.classList.remove('active');
-          }
 
           })
         }
         window.addEventListener('scroll',slider);
+        window.addEventListener('load',slider);
     </script>
     </body>
 </html>
