--- a/SET-B/B-4/index.html
+++ b/SET-B/B-4/index.html
@@ -11,7 +11,7 @@
     </body>
     <script>
 
-        const pressed = [];
+        var pressed = [];
         const code = 'DVM';
       window.addEventListener('keypress' , (e) => {
         pressed.push(e.key);
