--- a/SET-B/B-10/index.html
+++ b/SET-B/B-10/index.html
@@ -35,6 +35,9 @@
                             githubname.innerHTML = `${data.name}`;
                             githubbio.innerHTML = `${data.bio}`;
                         })
+                        .catch(function(error) {
+                         console.log(error);
+                        });  
                     }
 
                     function XMLRequest()
