--- a/SET-A/A-4/index.html
+++ b/SET-A/A-4/index.html
@@ -4,6 +4,7 @@
         <title>Navbar</title>
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width">
+        <meta charset="UTF-8">
     </head>
 <body>
         <div class="nav">
@@ -12,14 +13,14 @@
                     LOGO
                   </div>
                 </div>
-                <div class="nav-btn">
+                <div class="nav-btn" >
                   <label for="nav-check">
-                    <span class="up"></span>
-                    <span class="middle"></span>
-                    <span class="down"></span>
+                    <span class=".bar1"></span>
+                    <span class=".bar2" id="middle"></span>
+                    <span class=".bar3"></span>
                   </label>
                 </div>
-                <input type="checkbox" id="nav-check">
+                <input type="checkbox" id="nav-check"  >
                 <div class="nav-links">
                   <a href = "">link</a>
                   <a href = "">link</a>
@@ -28,5 +29,9 @@
                   <a href = "">link</a>
                 </div>
               </div>
+              <script>
+              
+              </script>
 </body>
+
 </html>
